--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.HomeMainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".activities.LoginActivity">
@@ -49,13 +49,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity
-            android:name=".activities.MapsActivity"
-            android:label="@string/title_activity_maps" />
-        <activity android:name=".activities.Main2Activity" />
-        <activity
-            android:name=".activities.MapsActivity2"
-            android:label="@string/title_activity_maps2" />
+        <activity android:name=".activities.MainRightnavActivity" />
         <activity
             android:name=".activities.ProductDetailView"
             android:windowSoftInputMode="stateHidden|adjustPan" />
